fixed portfolio spacing

--- a/style.css
+++ b/style.css
@@ -71,11 +71,18 @@ nav{
 h1 {
     font-family: 'Poppins', sans-serif;
     text-align: center;
+    font-size: 50px;
+}
+
+h2 {
+    font-family: 'Poppins', sans-serif;
+    font-size: xx-large;
 }
 
 p {
     font-family: 'Poppins', sans-serif;
     text-align: center;
+    font-size: large;
 }
 
 
@@ -91,25 +98,40 @@ p {
     width: 90%;
     margin: auto;
     justify-content: center;
+    align-items: center;
+    border-top: #5d4954;
+    border-top-width: 2px;
 
 }
 
 .project1-text {
-    background-color: rgb(233, 233, 19);
+    /* background-color: rgb(233, 233, 19); */
     padding: 20px;
     width: 45%;
     
+    
 }
+
+.project1-text p {
+    text-align: left;
+   
+}
+
 .project1-img {
-    background-color: rgb(15, 126, 230);
+    /* background-color: rgb(15, 126, 230); */
     padding: 20px;
     margin-left: 30px;
     width: 45%;
+    
+    
    
 }
 
 .project1-img img{
-    height: 300px;
+    align-items: center;
+    max-width: 100%;
+    object-fit: contain;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
    
 }
 .project2 {
@@ -117,6 +139,7 @@ p {
     width: 90%;
     margin: auto;
     justify-content: center;
+    align-items: center;
 
 }
 
@@ -129,7 +152,7 @@ p {
     
 }
 .project2-img {
-    background-color: rgb(15, 126, 230);
+    /* background-color: rgb(15, 126, 230); */
     padding: 20px;
     width: 45%;
     order: 1;
@@ -137,7 +160,10 @@ p {
 }
 
 .project2-img img{
-    height: 300px;
+    align-items: center;
+    max-width: 100%;
+    object-fit: contain;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
    
 }
 
@@ -146,6 +172,7 @@ p {
     width: 90%;
     margin: auto;
     justify-content: center;
+    align-items: center;
 
 }
 
@@ -157,7 +184,7 @@ p {
     
 }
 .project3-img {
-    background-color: rgb(15, 126, 230);
+    /* background-color: rgb(15, 126, 230); */
     padding: 20px;
     width: 45%;
     margin-left: 30px;
@@ -165,7 +192,10 @@ p {
 }
 
 .project3-img img{
-    height: 300px;
+    align-items: center;
+    max-width: 100%;
+    object-fit: contain;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
    
 }
 .project4 {
@@ -173,6 +203,7 @@ p {
     width: 90%;
     margin: auto;
     justify-content: center;
+    align-items: center;
 
 }
 
@@ -185,7 +216,7 @@ p {
     
 }
 .project4-img {
-    background-color: rgb(15, 126, 230);
+    /* background-color: rgb(15, 126, 230); */
     padding: 20px;
     width: 45%;
     order: 1;
@@ -193,8 +224,11 @@ p {
 }
 
 .project4-img img{
-    height: 300px;
-   
+    align-items: center;
+    max-width: 100%;
+    object-fit: contain;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+
 }
 
 .aboutMe {
@@ -214,7 +248,7 @@ p {
     
 }
 .profile-img {
-    background-color: rgb(15, 126, 230);
+    /* background-color: rgb(15, 126, 230); */
     padding: 20px;
     margin-left: 30px;
     width: 45%;
@@ -223,7 +257,10 @@ p {
 }
 
 .profile-img img{
-    height: 300px;
+    align-items: center;
+    max-width: 50%;
+    object-fit: contain;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
    
 }
 
@@ -268,13 +305,13 @@ p {
 
     @keyframes navLinkFade{
         from{
-opacity: 0;
-transform: translateX(50px);
+        opacity: 0;
+        transform: translateX(50px);
         }
 
         to{
-opacity: 1;
-transform: translateX(0px);
+        opacity: 1;
+        transform: translateX(0px);
         }
     }
 
